kubernetes/cluster-config/ingress/kcm-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: kube-cert-manager
  name: kube-cert-manager
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-cert-manager
      name: kube-cert-manager
    spec:
      serviceAccountName: kube-cert-manager
      containers:
        - name: kube-cert-manager
          image: gcr.io/universitycoursetracker/kube-cert-manager:latest
          imagePullPolicy: "Always"
          args:
            - "-data-dir=/var/lib/cert-manager"
            - "-acme-url=https://acme-v01.api.letsencrypt.org/directory"
          volumeMounts:
            - name: kcm-data
              mountPath: /var/lib/cert-manager
              subPath: cert-manager
      volumes:
        - name: "kcm-data"
          persistentVolumeClaim:
            claimName: kcm-pvc
