kubernetes/cluster-config/ingress/api-production-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spike-ingress
  namespace: production
  labels:
    stable.k8s.psg.io/kcm.class: "default"
  annotations:
    stable.k8s.psg.io/kcm.provider: "namecheap"
    stable.k8s.psg.io/kcm.email: "tev.jeffrey@gmail.com"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
    - hosts:
      - api.coursetrakr.io
      secretName: api-staging-tls
  rules:
  - host: api.coursetrakr.io
    http:
      paths:
      - path: /*
        backend:
          serviceName: spike-http
          servicePort: spike-port
