kubernetes/cluster-config/ingress/api-staging-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spike-ingress
  namespace: staging
  labels:
    stable.k8s.psg.io/kcm.class: "default"
  annotations:
    stable.k8s.psg.io/kcm.provider: "googlecloud"
    stable.k8s.psg.io/kcm.email: "tev.jeffrey@gmail.com"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
    - hosts:
        - api.staging.coursetrakr.io
      secretName: api-staging-tls
  rules:
    - host: api.staging.coursetrakr.io
      http:
        paths:
          - path: /*
            backend:
              serviceName: spike-http
              servicePort: spike-port
